--- a/internationalLife.html
+++ b/internationalLife.html
@@ -16,11 +16,11 @@
             --white: #fff;
         }
         
-        * {
+       * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         a {
@@ -110,13 +110,13 @@
 
         /* Perfectly Aligned Page Header Banner */
         .page-header {
-            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), 
-                        url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), 
+                        url('images/international-student-life.jpg');
             background-size: cover;
             background-position: center;
             color: white;
             text-align: center;
-            padding: 100px 20px;
+            padding: 180px 20px;
             margin-top: 80px; /* Push down by header height */
             margin-bottom: 50px;
         }
@@ -715,7 +715,7 @@ footer {
 }
 
 .footer-links a:hover {
-    color: #f39c12;
+    color: var(--white);
     padding-left: 5px;
 }
 
@@ -883,32 +883,32 @@ footer {
         <div class="section-content">
             <div class="card" style="animation-delay: 0.1s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="On-Campus Housing">
+                    <img src="images/hostel-rooms-mpu.jpg" alt="On-Campus Housing">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">On-Campus Housing</h3>
-                    <p>Safe, convenient, and vibrant living spaces right on campus with all amenities included. Our residence halls foster community and academic success.</p>
-                    <a href="#" class="card-link">Learn more about housing →</a>
+                    <p>Safe, convenient, and vibrant living spaces right on campus with all amenities included.unlimited wifi for academic success.</p>
+                    <!-- <a href="#" class="card-link">Learn more about housing →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.2s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1554469384-e58fac16e23a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Off-Campus Options">
+                    <img src="images/outside-rooms.jpg" alt="Off-Campus Options">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Off-Campus Options</h3>
                     <p>Explore apartments and shared housing in the local community with our assistance. We provide verified listings and roommate matching services.</p>
-                    <a href="#" class="card-link">View off-campus resources →</a>
+                    <!-- <a href="#" class="card-link">View off-campus resources →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.3s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Homestay Program">
+                    <img src="images/home-stay-program.jpg" alt="Homestay Program">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Homestay Program</h3>
                     <p>Live with a local family for an immersive cultural experience and home environment. Carefully screened families provide a supportive transition.</p>
-                    <a href="#" class="card-link">Discover homestay options →</a>
+                    <!-- <a href="#" class="card-link">Discover homestay options →</a> -->
                 </div>
             </div>
         </div>
@@ -920,32 +920,32 @@ footer {
         <div class="section-content">
             <div class="card" style="animation-delay: 0.1s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1588072432836-e10032774350?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="International Office">
+                    <img src="images/support-team.jpg" alt="International Office">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">International Office</h3>
                     <p>Dedicated support for visa, immigration, and transition to life in a new country. Our advisors help with paperwork, cultural adjustment, and more.</p>
-                    <a href="#" class="card-link">Contact our advisors →</a>
+                    <!-- <a href="#" class="card-link">Contact our advisors →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.2s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1571260898933-d1a1ff4b59b2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Academic Support">
+                    <img src="images/academic-team.jpg" alt="Academic Support">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Academic Support</h3>
                     <p>Tutoring, writing centers, and language assistance to help you succeed. Specialized programs for non-native English speakers available.</p>
-                    <a href="#" class="card-link">Explore academic resources →</a>
+                    <!-- <a href="#" class="card-link">Explore academic resources →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.3s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Health & Wellness">
+                    <img src="images/dedicated-medical-team.jpg" alt="Health & Wellness">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Health & Wellness</h3>
                     <p>Counseling services, health insurance, and wellness programs for your wellbeing. Multilingual counselors and 24/7 emergency support.</p>
-                    <a href="#" class="card-link">View health services →</a>
+                    <!-- <a href="#" class="card-link">View health services →</a> -->
                 </div>
             </div>
         </div>
@@ -962,7 +962,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Library & Study Spaces</h3>
                     <p>State-of-the-art libraries and 24/7 study areas with all the resources you need. Quiet zones, group study rooms, and research assistance.</p>
-                    <a href="#" class="card-link">Tour our libraries →</a>
+                    <!-- <a href="#" class="card-link">Tour our libraries →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.2s;">
@@ -972,7 +972,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Sports & Recreation</h3>
                     <p>Gyms, swimming pools, sports fields, and fitness classes to stay active. Intramural sports and wellness programs for all skill levels.</p>
-                    <a href="#" class="card-link">See fitness options →</a>
+                    <!-- <a href="#" class="card-link">See fitness options →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.3s;">
@@ -982,14 +982,14 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Dining Options</h3>
                     <p>Variety of dining halls, cafes, and restaurants catering to all dietary needs. Halal, kosher, vegetarian, and allergy-friendly options available.</p>
-                    <a href="#" class="card-link">View meal plans →</a>
+                    <!-- <a href="#" class="card-link">View meal plans →</a> -->
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Local Culture & City Info Section -->
-    <section class="section" id="culture" style="background-color: #f5f7fa;">
+    <!-- <section class="section" id="culture" style="background-color: #f5f7fa;">
         <h2 class="section-title">Local Culture & City Information</h2>
         <div class="section-content">
             <div class="card" style="animation-delay: 0.1s;">
@@ -1023,7 +1023,7 @@ footer {
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Clubs & Events Section -->
     <section class="section" id="clubs">
@@ -1036,7 +1036,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Student Organizations</h3>
                     <p>Over 200 clubs including cultural, academic, recreational, and special interest groups. Find your community or start your own organization.</p>
-                    <a href="#" class="card-link">Browse all clubs →</a>
+                    <!-- <a href="#" class="card-link">Browse all clubs →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.2s;">
@@ -1046,17 +1046,17 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">International Events</h3>
                     <p>Cultural nights, food festivals, and celebrations from around the world. Weekly events to share your culture and learn about others.</p>
-                    <a href="#" class="card-link">Event calendar →</a>
+                    <!-- <a href="#" class="card-link">Event calendar →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.3s;">
                 <div class="card-img">
-                    <img src="https://images.unsplash.com/photo-1519671482749-fd09be7ccebf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Leadership Opportunities">
+                    <img src="images/leardership.jpg" alt="Leadership Opportunities">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Leadership Opportunities</h3>
                     <p>Develop skills by leading clubs, organizing events, or joining student government. Leadership certificates and workshops available.</p>
-                    <a href="#" class="card-link">Get involved →</a>
+                    <!-- <a href="#" class="card-link">Get involved →</a> -->
                 </div>
             </div>
         </div>
@@ -1073,7 +1073,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Merit Scholarships</h3>
                     <p>Awards based on academic excellence, leadership, and special talents. Automatic consideration with your application.</p>
-                    <a href="#" class="card-link">Scholarship details →</a>
+                    <!-- <a href="#" class="card-link">Scholarship details →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.2s;">
@@ -1083,7 +1083,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Need-Based Aid</h3>
                     <p>Financial assistance programs for students with demonstrated need. Complete the financial aid application for consideration.</p>
-                    <a href="#" class="card-link">Financial aid info →</a>
+                    <!-- <a href="#" class="card-link">Financial aid info →</a> -->
                 </div>
             </div>
             <div class="card" style="animation-delay: 0.3s;">
@@ -1093,7 +1093,7 @@ footer {
                 <div class="card-body">
                     <h3 class="card-title">Country-Specific Awards</h3>
                     <p>Special scholarships for students from particular regions or countries. Check your country's eligibility requirements.</p>
-                    <a href="#" class="card-link">View regional awards →</a>
+                    <!-- <a href="#" class="card-link">View regional awards →</a> -->
                 </div>
             </div>
         </div>
