--- a/programs.html
+++ b/programs.html
@@ -22,9 +22,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        
         body {
             color: var(--text-color);
             line-height: 1.6;
@@ -170,14 +169,21 @@
             cursor: pointer;
         }
 
+        
+
         /* Programs Page Styles */
-        .hero {
-            background: linear-gradient(135deg, var(--primary-color), var(--dark-color));
-            color: white;
-            padding: 80px 0;
-            text-align: center;
-            margin-bottom: 50px;
-        }
+          .hero {
+    position: relative;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
+                url('images/admission-process-mpu.jpg') no-repeat center center;
+    background-size: cover;
+    color: white;
+    padding: 180px 20px;
+    text-align: center;
+    margin-bottom: 50px;
+    min-height: 500px; /* adjust as needed */
+    z-index: 1;
+}
 
         .hero h1 {
             font-size: 2.5rem;
