--- a/about.html
+++ b/about.html
@@ -400,7 +400,7 @@
         .milestone-number {
             font-size: 3rem;
             font-weight: 700;
-            color: var(--secondary-color);
+            color: var(--white);
             margin-bottom: 15px;
         }
         
