--- a/about.html
+++ b/about.html
@@ -1341,11 +1341,12 @@
                 <div class="footer-column">
                     <h3>Programs</h3>
                     <ul class="footer-links">
-                        <li><a href="btech-cs.html">B.Tech Computer Science</a></li>
-                        <li><a href="electrical-engg.html">Electrical Engineering</a></li>
-                        <li><a href="bba.html">BBA</a></li>
-                        <li><a href="mba.html">MBA</a></li>
-                        <li><a href="medical-lab-tech.html">Medical Lab Tech</a></li>
+                       <li><a href="programs.html">B.Tech Programs</a></li>
+                        <li><a href="programs.html"">MBA</a></li>
+                        <li><a href="programs.html"">BBA</a></li>
+                        <li><a href="programs.html"">Vocational Courses</a></li>
+                        <li><a href="programs.html"">Ph.D Programs</a></li>
+                        <li><a href="programs.html"">Certificate Courses</a></li>
                     </ul>
                 </div>
                 
