--- a/admissions.html
+++ b/admissions.html
@@ -1172,24 +1172,23 @@ background-size: cover;
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Courses</a></li>
-                        <li><a href="#">Admissions</a></li>
-                        <li><a href="#">Placements</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                          <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="programs.html">Programs</a></li>
+                        <li><a href="admissions.html">Admissions</a></li>
+                        <li><a href="internationalLife.html">International Student Life</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-column">
                     <h3>Programs</h3>
                     <ul class="footer-links">
-                        <li><a href="#">B.Tech Programs</a></li>
-                        <li><a href="#">MBA</a></li>
-                        <li><a href="#">BBA</a></li>
-                        <li><a href="#">Vocational Courses</a></li>
-                        <li><a href="#">Ph.D Programs</a></li>
-                        <li><a href="#">Certificate Courses</a></li>
+                    <li><a href="programs.html">B.Tech Programs</a></li>
+                        <li><a href="programs.html"">MBA</a></li>
+                        <li><a href="programs.html"">BBA</a></li>
+                        <li><a href="programs.html"">Vocational Courses</a></li>
+                        <li><a href="programs.html"">Ph.D Programs</a></li>
+                        <li><a href="programs.html"">Certificate Courses</a></li>
                     </ul>
                 </div>
                 
