admission page changes

--- a/admissions.html
+++ b/admissions.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admissions - Mind Power University</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <style>
         /* Your Existing Global Styles */
         :root {
@@ -1132,18 +1133,18 @@ background-size: cover;
                
             </div>
             <div class="cta-image">
-                <img src="images/global-communities-students.jpg" alt="International students at Mind Power University" loading="lazy">
-                <div class="flag-overlay">
-                    <div class="flag-icon">🇮🇳</div>
-                    <div class="flag-icon">🇺🇸</div>
-                    <div class="flag-icon">🇬🇧</div>
-                    <div class="flag-icon">🇨🇦</div>
-                    <div class="flag-icon">🇦🇺</div>
-                    <div class="flag-icon">🇳🇬</div>
-                    <div class="flag-icon">🇿🇦</div>
-                    <div class="flag-icon">🇧🇩</div>
-                </div>
-            </div>
+    <img src="images/global-communities-students.jpg" alt="International students at Mind Power University" loading="lazy">
+    <div class="flag-overlay">
+        <span class="flag-icon flag-icon-in flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-us flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-gb flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-ca flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-au flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-ng flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-za flag-icon-circle"></span>
+        <span class="flag-icon flag-icon-bd flag-icon-circle"></span>
+    </div>
+</div>
         </div>
     </div>
 </section>
