--- a/admissions.html
+++ b/admissions.html
@@ -1204,7 +1204,7 @@ background-size: cover;
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Bhimtal, Nainital, Uttarakhand, India - 263136</p>
-                    <p><i class="fas fa-phone"></i> +91 87006 13932</p>
+                     <p><i class="fas fa-phone"></i> +91 8700613932 , +91 9258119490 , +91 8882822265</p>
                     <p><i class="fas fa-envelope"></i> global@mindpoweruniversity.ac.in</p>
                 </div>
             </div>
@@ -1293,5 +1293,29 @@ background-size: cover;
             });
         });
     </script>
+
+     <!-- Apply now code  -->
+<script>
+  fetch('apply-button.html')
+    .then(res => res.text())
+    .then(html => {
+      const div = document.createElement('div');
+      div.innerHTML = html;
+      document.body.appendChild(div);
+
+      // Attach click event after button is added to DOM
+      const btn = div.querySelector('#applyNowBtn');
+      if (btn) {
+        btn.addEventListener('click', function () {
+          window.location.href = "https://admissions.mindpoweruniversity.ac.in/";
+        });
+      }
+    })
+    .catch(err => console.error('Apply button load failed:', err));
+</script>
+
+
+
+
 </body>
 </html>
