--- a/programs.html
+++ b/programs.html
@@ -442,7 +442,8 @@
             padding: 0 15px;
         }
 
-
+ /* Phone Icons  */
+ 
  .phone-block {
   display: flex;
   align-items: flex-start;
